# agent-infrastructure-platform

./: .gitignore  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LAUNCH.md  LICENSE  MOLTBOOK_POST.md  README.md  docker-compose.yml  pyproject.toml  quick_push.sh  setup_github_remote.sh
.github/workflows/: docker.yml  release.yml  tests.yml
docs/: architecture.md
examples/: multi_agent_workflow.py  secure_execution.py
src/agent_infrastructure_platform/: __init__.py  cli.py
src/agent_infrastructure_platform/common/: __init__.py  agent.py  decorators.py  exceptions.py  types.py
src/agent_infrastructure_platform/compute/: __init__.py  runtime.py  sandbox.py  tee.py
src/agent_infrastructure_platform/economic/: __init__.py  market.py  payments.py  staking.py
src/agent_infrastructure_platform/governance/: __init__.py  audit.py  killswitch.py  policy.py
src/agent_infrastructure_platform/identity/: __init__.py  agent_card.py  credentials.py  manager.py  mpc.py  reputation.py
src/agent_infrastructure_platform/memory/: __init__.py  backend.py  episodic.py  hybrid.py
src/agent_infrastructure_platform/observability/: __init__.py  metrics.py  tracing.py
src/agent_infrastructure_platform/orchestration/: __init__.py  circuit_breaker.py  orchestrator.py  swarm.py
src/agent_infrastructure_platform/protocols/: __init__.py
src/agent_infrastructure_platform/protocols/a2a/: __init__.py  protocol.py  types.py
src/agent_infrastructure_platform/protocols/acp/: protocol.py  types.py
src/agent_infrastructure_platform/protocols/anp/: protocol.py
src/agent_infrastructure_platform/protocols/mcp/: __init__.py  client.py  server.py  types.py
tests/: test_governance.py  test_identity.py  test_protocols.py
