[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-infrastructure-platform"
version = "0.1.0"
description = "World-class multi-agent infrastructure platform - Universal protocols, identity, memory, and governance"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Agent Infrastructure Team"}
]
keywords = ["agents", "mcp", "a2a", "multi-agent", "orchestration", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "redis>=5.2.0",
    "neo4j>=5.27.0",
    "qdrant-client>=1.12.0",
    "cryptography>=44.0.0",
    "pynacl>=1.5.0",
    "jsonschema>=4.23.0",
    "structlog>=25.1.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "aiocache>=0.12.0",
    "celery>=5.4.0",
    "eth-hash[pycryptodome]>=0.7.0",
    "web3>=7.8.0",
    "pyjwt>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "orjson>=3.10.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.37",
    "alembic>=1.14.0",
    "sentry-sdk>=2.20.0",
    "tenacity>=9.0.0",
    "aiohttp>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "pre-commit>=4.1.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "griffe>=1.0.0",
]

[project.scripts]
aip = "agent_infrastructure_platform.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
